--- a/src/main/resources/pck/enote/signInPage.fxml
+++ b/src/main/resources/pck/enote/signInPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -12,9 +13,9 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pck.enote.controller.SignInPageController">
     <children>
-        <Pane layoutX="100.0" layoutY="70.0" prefHeight="465.0" prefWidth="400.0">
+        <Pane layoutX="100.0" layoutY="40.0" prefHeight="500.0" prefWidth="400.0">
             <children>
-                <Pane layoutX="55.0" layoutY="65.0" prefHeight="400.0" prefWidth="290.0" style="-fx-background-color: #ebebeb;">
+                <Pane layoutX="55.0" layoutY="65.0" prefHeight="438.0" prefWidth="290.0" style="-fx-background-color: #ebebeb;">
                     <children>
                         <Pane layoutY="84.0" prefHeight="110.0">
                             <children>
@@ -48,7 +49,13 @@
                         </Pane>
                         <Button fx:id="loginButton" layoutX="83.0" layoutY="330.0" mnemonicParsing="false" onAction="#onLoginButtonClicked" style="-fx-font-size: 20;" text="Đăng nhập" />
                         <Label layoutX="72.0" layoutY="15.0" style="-fx-font-size: 30;" text="Đăng nhập" />
-                  <Label fx:id="succesAlert" alignment="CENTER" contentDisplay="CENTER" layoutY="295.0" prefHeight="30.0" prefWidth="290.0" style="-fx-font-size: 20;" textAlignment="CENTER" />
+                        <Label fx:id="succesAlert" alignment="CENTER" contentDisplay="CENTER" layoutY="295.0" prefHeight="30.0" prefWidth="290.0" style="-fx-font-size: 20;" textAlignment="CENTER" />
+                        <Pane layoutY="390.0" prefHeight="25.0" prefWidth="290.0">
+                            <children>
+                                <Label layoutX="50.0" style="-fx-font-size: 16;" text="Chưa có tài khoản?" />
+                                <Hyperlink fx:id="signUpHyperLink" layoutX="185.0" onAction="#onSignUpHyperLinkClicked" style="-fx-font-size: 14;" text="Đăng ký" />
+                            </children>
+                        </Pane>
                     </children>
                     <padding>
                         <Insets bottom="20.0" />
