Add hyperlink redirect to connect screen

--- a/src/main/resources/pck/enote/signUpPage.fxml
+++ b/src/main/resources/pck/enote/signUpPage.fxml
@@ -79,5 +79,6 @@
                   <Label fx:id="succesAlert" alignment="CENTER" contentDisplay="CENTER" layoutX="129.0" layoutY="440.0" style="-fx-font-size: 16px; -fx-text-fill: green;" text="Đăng ký thành công" textAlignment="CENTER" visible="false" />
             </children>
         </Pane>
+        <Hyperlink fx:id="connectHyperLink" onAction="#onConnectHyperLinkClicked" layoutX="526.0" layoutY="14.0" style="-fx-font-size: 16;" text="Kết nối" />
     </children>
 </AnchorPane>
