--- a/src/main/resources/pck/enote/signInPage.fxml
+++ b/src/main/resources/pck/enote/signInPage.fxml
@@ -64,5 +64,6 @@
                 <Label layoutX="126.0" style="-fx-font-size: 48; -fx-font-weight: 700;" text="E-Note" />
             </children>
         </Pane>
+      <Hyperlink fx:id="connectHyperLink" onAction="#onConnectHyperLinkClicked" layoutX="526.0" layoutY="14.0" style="-fx-font-size: 16;" text="Kết nối" />
     </children>
 </AnchorPane>
