--- a/src/main/resources/pck/enote/IPScreen.fxml
+++ b/src/main/resources/pck/enote/IPScreen.fxml
@@ -3,18 +3,17 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pck.enote.controller.IPScreenController">
+<AnchorPane prefHeight="600.0" prefWidth="600.0" style="-fx-background-color: FFFBE3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pck.enote.controller.IPScreenController">
     <children>
         <Pane layoutX="100.0" layoutY="70.0" prefHeight="465.0" prefWidth="400.0">
             <children>
-                <Pane layoutX="55.0" layoutY="65.0" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #ebebeb;">
+                <Pane layoutX="55.0" layoutY="65.0" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: FAF1C1;">
                     <children>
                         <Pane layoutY="84.0" prefHeight="110.0" prefWidth="300.0">
                             <children>
@@ -39,8 +38,8 @@
                                         <Image url="https://res.cloudinary.com/pck-group/image/upload/v1655628901/MMT/enote/images/ethernet_scvhsm.png" />
                                     </image>
                                 </ImageView>
-                                <PasswordField fx:id="portField" layoutX="65.0" layoutY="40.0" prefHeight="32.0" prefWidth="210.0" promptText="Nhập số cổng..." style="-fx-font-size: 16;" />
                                 <Label fx:id="portWarningField" layoutX="28.0" layoutY="83.0" style="-fx-font-size: 16;" text="" />
+                                <TextField fx:id="portField" layoutX="65.0" layoutY="40.0" maxWidth="210.0" prefHeight="32.0" prefWidth="210.0" promptText="Nhập số cổng..." style="-fx-font-size: 16;" />
                             </children>
                             <padding>
                                 <Insets right="20.0" />
