--- a/src/main/resources/pck/enote/viewNoteDetails.fxml
+++ b/src/main/resources/pck/enote/viewNoteDetails.fxml
@@ -7,35 +7,59 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pck.enote.controller.ViewNoteDetailsController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Pane prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: #ddd;">
             <children>
-                <Button layoutX="18.0" layoutY="10.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="50.0" text="Back" />
+                <Button fx:id="btnBack" layoutX="18.0" layoutY="10.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="50.0" text="Back" />
                 <Label alignment="CENTER" contentDisplay="CENTER" layoutY="57.0" prefHeight="50.0" prefWidth="300.0" text="Thông tin">
                     <font>
                         <Font size="54.0" />
                     </font>
                 </Label>
-                <Label layoutX="29.0" layoutY="187.0" text="ID" />
-                <TextField fx:id="tfId" editable="false" layoutX="128.0" layoutY="183.0" text="234" />
-                <Label layoutX="29.0" layoutY="228.0" text="Tên Tệp" />
-                <TextField fx:id="tfFileName" editable="false" layoutX="128.0" layoutY="224.0" text="234" />
-                <Label layoutX="29.0" layoutY="271.0" text="Loại Tệp" />
-                <TextField fx:id="tfFileType" editable="false" layoutX="128.0" layoutY="267.0" text="234t" />
-                <Label layoutX="29.0" layoutY="312.0" text="Ngày tải lên" />
-                <TextField fx:id="tfCreatedAt" editable="false" layoutX="128.0" layoutY="308.0" text="34t" />
-                <Button layoutX="112.0" layoutY="363.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Tải xuống" />
+                <Label layoutX="29.0" layoutY="187.0" text="ID">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="tfId" editable="false" layoutX="129.0" layoutY="187.0" text="234" />
+                <Label layoutX="29.0" layoutY="228.0" text="Tên Tệp">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="tfFileName" editable="false" layoutX="129.0" layoutY="228.0" text="234" />
+                <Label layoutX="29.0" layoutY="271.0" text="Loại Tệp">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="tfFileType" editable="false" layoutX="129.0" layoutY="271.0" text="234t" />
+                <Label layoutX="29.0" layoutY="312.0" text="Ngày tải lên">
+                    <font>
+                        <Font name="System Bold" size="16.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="tfCreatedAt" editable="false" layoutX="129.0" layoutY="312.0" text="34t" />
+                <Button fx:id="btnDownload" layoutX="112.0" layoutY="366.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="76.0" text="Tải xuống" />
             </children>
         </Pane>
         <Pane layoutX="300.0" prefHeight="600.0" prefWidth="500.0">
             <children>
-                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="100.0" layoutY="57.0" prefHeight="50.0" prefWidth="300.0" text="Nội dung">
+                <Label alignment="CENTER" contentDisplay="CENTER" layoutX="100.0" layoutY="55.0" prefHeight="50.0" prefWidth="300.0" text="Nội dung">
                     <font>
                         <Font size="54.0" />
                     </font>
                 </Label>
-                <Pane fx:id="content" layoutY="180.0" prefHeight="420.0" prefWidth="500.0" />
+                <Pane fx:id="content" layoutY="180.0" prefHeight="420.0" prefWidth="500.0">
+                    <children>
+                        <Label fx:id="notification" alignment="CENTER" contentDisplay="CENTER" layoutY="8.0" prefHeight="25.0" prefWidth="500.0" text="Không thể xem trước tệp tin này. Vui lòng tải về.">
+                            <font>
+                                <Font size="16.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </Pane>
             </children>
         </Pane>
     </children>
