--- a/src/main/resources/pck/enote/viewNotes.fxml
+++ b/src/main/resources/pck/enote/viewNotes.fxml
@@ -1,19 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Hyperlink?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="pck.enote.controller.ViewNotesController">
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pck.enote.controller.ViewNotesController">
     <children>
-        <TableView fx:id="tableView" prefHeight="600.0" prefWidth="800.0">
+      <Pane prefHeight="91.0" prefWidth="400.0">
+         <children>
+            <Label layoutX="10.0" layoutY="12.0" prefHeight="30.0" prefWidth="75.0" text="Username">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField disable="true" editable="false" layoutX="90.0" layoutY="10.0" prefHeight="30.0" prefWidth="300.0" text="phat1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label layoutX="10.0" layoutY="50.0" prefHeight="30.0" prefWidth="75.0" text="Số ghi chú">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField disable="true" editable="false" layoutX="90.0" layoutY="50.0" prefHeight="30.0" prefWidth="300.0" text="100">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </Pane>
+      <Pane layoutX="400.0" prefHeight="100.0" prefWidth="400.0">
+         <children>
+            <Label layoutX="10.0" layoutY="10.0" prefHeight="30.0" prefWidth="75.0" text="Server IP">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField disable="true" editable="false" layoutX="90.0" layoutY="10.0" prefHeight="30.0" prefWidth="300.0" text="172.21.64.1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Label layoutX="10.0" layoutY="50.0" prefHeight="30.0" prefWidth="75.0" text="Server port">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField disable="true" editable="false" layoutX="90.0" layoutY="50.0" prefHeight="30.0" prefWidth="150.0" text="9999">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Hyperlink layoutX="250.0" layoutY="50.0" prefHeight="30.0" text="Tùy chỉnh kết nối" />
+         </children>
+      </Pane>
+        <TableView fx:id="tableView" layoutY="149.0" prefHeight="450.0" prefWidth="800.0">
             <columns>
-                <TableColumn fx:id="colId" prefWidth="72.80001527070999" resizable="false" text="ID"/>
-                <TableColumn fx:id="colFileName" prefWidth="258.3999786376953" resizable="false" text="Tên Tệp Tin"/>
-                <TableColumn fx:id="colFileType" minWidth="0.0" prefWidth="196.0" resizable="false"
-                             text="Loại Tệp Tin"/>
-                <TableColumn fx:id="colCreatedAt" prefWidth="164.00006103515625" resizable="false" text="Ngày tải lên"/>
-                <TableColumn fx:id="colBtn" prefWidth="109.60003662109375" resizable="false"/>
+                <TableColumn fx:id="colId" prefWidth="100.0" resizable="false" text="ID" />
+                <TableColumn fx:id="colFileName" prefWidth="250.0" resizable="false" text="Tên Tệp Tin" />
+                <TableColumn fx:id="colFileType" minWidth="0.0" prefWidth="150.0" resizable="false" text="Loại Tệp Tin" />
+                <TableColumn fx:id="colCreatedAt" prefWidth="150.0" resizable="false" text="Ngày tải lên" />
+                <TableColumn fx:id="colBtn" prefWidth="100.0" resizable="false" />
             </columns>
         </TableView>
+      <Label layoutX="10.0" layoutY="100.0" prefHeight="35.0" prefWidth="400.0" text="Danh sách các ghi chú đã lưu">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
